# server-os

./: .gitignore  .server-os-history  Cargo.toml  README.md  commitlint.config.js  deploy.sh  install-security.sh  install-tools.sh  install.sh  package.json  server-assistant.sh  server-management.sh  server-os.toml  uninstall.sh
.husky/: commit-msg
security/aegis-main/: .gitignore  Cargo.toml  LICENSE  README.md
security/aegis-main/.github/workflows/: checks.yaml
security/aegis-main/documentation/: config.md  rules.md
security/aegis-main/src/: main.rs
security/aegis-main/src/clients/: mod.rs
security/aegis-main/src/config/: mod.rs
security/aegis-main/src/handlers/: mod.rs  tests.rs  utils.rs
security/aegis-main/src/rules/: regular.rs
src/: config.rs  main.rs  tools.rs
src/security/aegis-main/src/clients/: metrics.rs  redis.rs
src/security/aegis-main/src/rules/: mod.rs  rate_based.rs  statements.rs
src/security/heimdall-master/: Cargo.toml
src/tools/bandwhich-main/: Cargo.toml
src/tools/bandwhich-main/src/: lib.rs  main.rs
src/tools/bottom-main/: Cargo.toml
src/tools/bottom-main/src/: lib.rs
src/tools/trippy-master/: Cargo.toml
src/tools/trippy-master/crates/trippy/: Cargo.toml
src/tools/trippy-master/crates/trippy-core/tests/resources/simulation/: ipv4_tcp_fixed_dest.toml
src/tools/yazi-main/yazi-config/preset/: keymap-default.toml  keymap-server-os.toml
src/tools/yazi-main/yazi-fm/: Cargo.toml
src/tools/yazi-main/yazi-fm/src/: lib.rs
tools/trippy-master/docs/src/content/docs/reference/: version.md
