
[package]
name = "server-os"
version = "0.1.0"
edition = "2021"
authors = ["TIA <tia@example.com>"]
description = "Security-hardened server OS dashboard launcher"
license = "MIT"

[dependencies]
rustyline = "14.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "0.32"
notify = "6.1"
pnet = "0.35"
ring = "0.17"

[[bin]]
name = "os"
path = "src/main.rs"
