[package]
name = "trippy"
description = "A network diagnostic tool"
version = "0.14.0-dev"
authors = ["FujiApple <fujiapple852@gmail.com>"]
documentation = "https://github.com/fujiapple852/trippy"
homepage = "https://github.com/fujiapple852/trippy"
repository = "https://github.com/fujiapple852/trippy"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.70"
keywords = ["cli", "tui", "traceroute", "ping", "icmp"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "trip"
path = "src/main.rs"
required-features = ["tui"]

[features]
default = ["tui"]
tui = ["trippy-tui", "anyhow"]
core = ["trippy-core"]
privilege = ["trippy-privilege"]
dns = ["trippy-dns"]
packet = ["trippy-packet"]

[dependencies]
trippy-tui = { version = "0.14.0-dev", path = "../trippy-tui", optional = true }
trippy-core = { version = "0.14.0-dev", path = "../trippy-core", optional = true }
trippy-privilege = { version = "0.14.0-dev", path = "../trippy-privilege", optional = true }
trippy-dns = { version = "0.14.0-dev", path = "../trippy-dns", optional = true }
trippy-packet = { version = "0.14.0-dev", path = "../trippy-packet", optional = true }
anyhow = { version = "1.0", optional = true }

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/trip", dest = "/usr/bin/trip", mode = "755" },
]
